# StrongSORT

./: .gitignore  README.md  opts.py  pyproject.toml  strong_sort.py
deep_sort/: linear_assignment.py
tools/: generate_detections.py
